--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,41 @@
-.App {
+.ant-layout {
+
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  /*justify-content: flex-start;*/
+  align-items: center;
+  /*text-align: center;*/
+
+}
+
+.ant-layout-header {
+
+
+  width: 100%;
+  
+
+}
+
+.ant-layout-content {
+
+  margin: auto;
+  background-color: green;
+  width: 100%;
+  height: 100%;
+
+}
+
+.ant-layout-footer {
+
+  width: 100%;
+  
+}
+
+
+
+/*.App {
   text-align: center;
 }
 
@@ -30,4 +67,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+}*/
