--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+textarea {
+  width: 100%;
+  height: -webkit-fill-available;
+  /*max-height: 50%;*/
+  resize: vertical;
+  overflow-y: scroll;
+  background-color: black;
+  color: white;
+
+  
+}
+
 .ant-layout {
 
   height: 100vh;
@@ -14,6 +26,7 @@
 
 
   width: 100%;
+  background-color: orange;
   
 
 }
@@ -21,17 +34,25 @@
 .ant-layout-content {
 
   margin: auto;
-  background-color: green;
+  /*background-color: green;*/
   width: 100%;
   height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  /*justify-content: center;*/
+  align-items: center;
 
 }
 
 .ant-layout-footer {
 
   width: 100%;
-  
+  background-color: blue;
+  flex-shrink: 0;
+
 }
+
 
 
 
