--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 textarea {
   width: 100%;
-  height: -webkit-fill-available;
+  /*height: -webkit-fill-available;*/
   /*max-height: 50%;*/
+  min-height: fit-content;
   resize: vertical;
   overflow-y: scroll;
   background-color: black;
@@ -26,7 +27,8 @@ textarea {
 
 
   width: 100%;
-  background-color: orange;
+  /*background-color: orange;*/
+  color: white;
   
 
 }
