added regex to format input into JSON. Sketching chart plotting

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ textarea {
   width: 100%;
   /*height: -webkit-fill-available;*/
   /*max-height: 50%;*/
-  min-height: fit-content;
+  min-height: 200px;
   resize: vertical;
   overflow-y: scroll;
   background-color: black;
