--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,32 @@
+.test {
+
+  resize: vertical;
+  overflow-y: scroll;
+  background-color: black;
+  color: white;
+  resize: vertical;
+}
+
+
+
+.input {
+  width: 100%;
+  /*height: -webkit-fill-available;*/
+  /*max-height: 50%;*/
+  /*min-height: 200px;*/
+  resize: vertical;
+  /*overflow-y: scroll;*/
+  background-color: black;
+  color: white;
+
+  
+}
+
 textarea {
   width: 100%;
   /*height: -webkit-fill-available;*/
   /*max-height: 50%;*/
-  min-height: 200px;
+  /*min-height: 200px;*/
   resize: vertical;
   overflow-y: scroll;
   background-color: black;
@@ -11,14 +35,20 @@ textarea {
   
 }
 
+.chart-wrapper{
+  margin: auto;
+  /*width: 600px;
+  height: 650px;*/
+}
+
 .ant-layout {
 
   height: 100vh;
-  overflow: hidden;
+  /*overflow: hidden;
   display: flex;
-  flex-direction: column;
+  flex-direction: column;*/
   /*justify-content: flex-start;*/
-  align-items: center;
+  /*align-items: center;*/
   /*text-align: center;*/
 
 }
@@ -35,15 +65,15 @@ textarea {
 
 .ant-layout-content {
 
-  margin: auto;
-  /*background-color: green;*/
+/*  margin: auto;
+  background-color: green;
   width: 100%;
   height: 100%;
 
   display: flex;
   flex-direction: column;
-  /*justify-content: center;*/
-  align-items: center;
+  justify-content: center;
+  align-items: center;*/
 
 }
 
@@ -52,6 +82,7 @@ textarea {
   width: 100%;
   background-color: blue;
   flex-shrink: 0;
+  /*margin-top: auto;*/
 
 }
 
