handling inputs from the input area

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,15 @@ textarea {
   color: white;
 }
 
+.inputarea{
+	width: 100%;
+  resize: vertical;
+  overflow-y: scroll;
+  background-color: black;
+  color: white;
+	//max-height: 100px;
+}
+
 .test {
   resize: vertical;
   overflow-y: scroll;
