--- a/src/InputArea.css
+++ b/src/InputArea.css
@@ -1,8 +1,8 @@
-.inputarea-wrapper{
+/* .inputarea{
 	width: 100%;
   resize: vertical;
   overflow-y: scroll;
   background-color: black;
   color: white;
 	//max-height: 100px;
-}
+} */
