--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,8 @@ textarea {
 
 .ant-layout {
   height: 100vh;
+  max-height: 100%;
+  /* display: flex; */
   font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -33,5 +35,5 @@ textarea {
 
 .ant-layout-footer {
 
-  /* flex-shrink: 0; */
+  flex-shrink: 0;
 }
