--- a/src/InputArea.css
+++ b/src/InputArea.css
@@ -8,23 +8,19 @@
 .inputcontainer{
 
 position: relative;
-  /* min-height: 100px;
-  resize: vertical;*/
-  /* overflowY: scroll; */
-  /* border-bottom: solid; */
-  /* border-color: green; */
+
 }
 .resizer {
   position: relative;
   top: -9px;
-  background-color: blue;
+  background-color: #222;
   /* height:5px; */
   margin-left: auto;
   margin-right: auto;
   width: 40px;
   height: 16px;
   cursor: row-resize;
-  border: 2px solid red;
+  border: 2px solid #444;
   border-radius: 5px;
   z-index: 99;
 
