--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,3 @@
-textarea {
-  width: 100%;
-  resize: vertical;
-  overflow-y: scroll;
-  background-color: black;
-  color: white;
-}
-
-.inputarea{
-	width: 100%;
-  resize: vertical;
-  overflow-y: scroll;
-  background-color: black;
-  color: white;
-	//max-height: 100px;
-}
-.input {
-  min-height: 200px;
-}
-
 .chart-wrapper{
   margin: auto;
 }
@@ -25,15 +5,6 @@ textarea {
 .ant-layout {
   height: 100vh;
   max-height: 100%;
-  /* display: flex; */
+  overflow: hidden;
   font-family: 'Source Sans Pro', sans-serif;
-}
-
-.ant-layout-header {
-
-}
-
-.ant-layout-footer {
-
-  flex-shrink: 0;
 }
